...
import com.google.android.play.core.install.model.InstallStatus
import dagger.hilt.android.AndroidEntryPoint
import kotlinx.coroutines.launch
import javax.inject.Inject

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_SEARCH = "main_activity_search"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_SEARCH_BACK = "main_activity_search_back"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_SEARCH_TEXT = "main_activity_search_text"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_SEARCH_CLEAR = "main_activity_search_clear"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_SEARCH_MENU = "main_activity_search_menu"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_TOOLBAR = "main_activity_toolbar"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_TOOLBAR_BACK = "main_activity_toolbar_back"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_BOTTOM_NAV = "main_activity_bottom_nav"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_BOTTOM_NAV_DEVICE = "main_activity_bottom_nav_device"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_BOTTOM_NAV_NETWORK = "main_activity_bottom_nav_network"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_BOTTOM_NAV_SOFTWARE = "main_activity_bottom_nav_software"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_BOTTOM_NAV_HARDWARE = "main_activity_bottom_nav_hardware"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_DUAL_PANE_NAV = "main_activity_dual_pane_nav"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_DUAL_PANE_NAV_DEVICE = "main_activity_dual_pane_nav_device"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_DUAL_PANE_NAV_NETWORK = "main_activity_dual_pane_nav_network"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_DUAL_PANE_NAV_SOFTWARE = "main_activity_dual_pane_nav_software"

@VisibleForTesting
const val MAIN_ACTIVITY_TEST_TAG_DUAL_PANE_NAV_HARDWARE = "main_activity_dual_pane_nav_hardware"

private sealed class Screen(
    val route: String, @StringRes val stringRes: Int, val icon: ImageVector
) {
    data object Device :
        Screen("device", R.string.bottom_nav_title_device, Icons.Outlined.PermDeviceInformation)
...
