<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Device Info</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="search_hint_items">Search all</string>
    <string name="search_clear">Clear search</string>
    <string name="not_found">Unable to determine</string>
    <string name="no_longer_possible">Not possible since Android %s</string>
    <string name="not_possible_yet">Available starting on Android %s</string>
    <string name="copy_to_clipboard">Copied %s to clipboard!</string>
    <string name="send_to">Share text to…</string>
    <string name="send_to_no_apps">No app available</string>
    <string name="menu_back">Navigate back</string>
    <string name="menu_overflow">More options</string>
    <string name="menu_search">@android:string/search_go</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_copy_to_clipboard">@android:string/copy</string>
    <string name="menu_share">Share</string>
    <string name="permission_item_subtitle">Please enable the %s permission</string>
    <string name="permission_snackbar_retry">The %1$s permission is required to display
        %2$s</string>
    <string name="snackbar_not_found_adapter">Unable to retrieve %s from this device</string>
    <string name="permission_snackbar_button">Retry</string>
    <string name="textview_recyclerview_no_items">No items</string>
    <string name="textview_recyclerview_no_search_items">No results</string>
    <string name="textview_recyclerview_title">Results</string>
    <string name="bottom_nav_title_device">Device</string>
    <string name="bottom_nav_title_network">Network</string>
    <string name="bottom_nav_title_software">Software</string>
    <string name="bottom_nav_title_hardware">Hardware</string>
    <string name="hardware_storage_output_format">%1$s of %2$s free</string>
    <string name="search_shortcut_short_label">@string/menu_search</string>
    <string name="search_shortcut_long_label">@string/menu_search</string>
    <string name="search_disabled_message">Search (disabled)</string>
    <string name="search_loading">Searching…</string>
    <string name="general_loading">Loading…</string>
...
    <string name="update_notavailable_ok">@android:string/ok</string>
    <string name="update_unknown_title">Failed to check for updates</string>
    <string name="update_unknown_message">An unknown response has been received. Please check
        your internet connection or try again later.
    </string>
    <string name="update_unknown_ok">Got it</string>
    <string name="update_download_finished">An update has just been downloaded.</string>
    <string name="update_restart">Restart</string>
    <string name="update_download_failed">Failed to download an update.</string>
    <string name="update_retry">Retry</string>
    <!-- Item Titles -->
    <string name="device_title_imei">IMEI / MEID</string>
    <string name="device_title_model">Model Number</string>
    <string name="device_title_serial">Serial</string>
    <string name="device_title_android_id">Android/Hardware ID</string>
...
